# backend

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 23a25e8f159a_add_is_template_to_orders.py  3104cacec322_add_addresses_to_orders.py  336c8d1d9605_add_invoice_table.py  358021460daa_add_received_at_to_orders.py  4103e81c4c65_add_distance_and_fuel_cost_to_routes.py  44cb2df47560_add_all_tables.py  52576e5c4ec9_add_total_amount_to_order_and_invoice.py  527515046fad_add_vehicle_and_delivery_photo.py  79dd40b0cce8_create_users_table.py  8cd20699bdfb_initial_migration.py  9025fab5e5ea_add_fuel_price_to_vehicles_and_distance_.py  9e8f127d1f23_merge_heads.py  a100409eede6_add_vehicle_id_to_routes.py  a283d016c91f_initial_migration.py  acd8e4bef2dd_add_invoices_table.py  dba26fb8e12f_add_orders_routes_shipments_.py  dc44969cffc5_update_user_roles_and_cors.py  e34be2f7c332_add_orders_table.py  f9b03fec5dde_initial_schema_v1.py
app/: enums.py  main.py
app/api/: deps.py
app/core/: config.py  s3.py  security.py
app/crud/: delivery_photo.py  invoice.py  notification.py  order.py  route.py  route_status.py  shipment.py  user.py  vehicle.py
app/db/: session.py
app/models/: delivery_photo.py  invoice.py  notification.py  order.py  route.py  route_status.py  shipment.py  user.py  vehicle.py
app/schemas/: invoice.py  (+8 more)
deployment/: .env.example  .env.s3.example  Dockerfile  docker-compose.yml  policy.json
tests/: conftest.py  test_auth.py  test_daily_stats.py  test_order_lifecycle.py  test_orders.py  test_s3.py  test_services_unit.py  test_statistics.py  test_vehicle_service.py
(+15 files in other folders)
