[project]
name = "logiflow"
version = "0.1.0"
description = "LogiFlow project for logistics management API"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "python-multipart>=0.0.27",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.44.0",
    "aioboto3>=15.5.0",
    "botocore>=1.40.61",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.9",
]
